[38] Use spinjs for whell spin icon trigger them using d3.on() event.

--- a/map/index.html
+++ b/map/index.html
@@ -13,6 +13,7 @@
     <script src="http://maps.googleapis.com/maps/api/js?sensor=true&amp;v=3.14&amp;libraries=geometry,places"></script>
     <script src="js/vendor/GeoJSON.min.js"></script>
     <script src="js/vendor/topojson.v1.min.js"></script>
+    <script src="js/vendor/spin.min.js"></script>
 
     <script src="js/PetaCaleg.js"></script>
 
@@ -20,6 +21,7 @@
     <link rel="stylesheet" href="css/PetaCaleg.css">
   </head>
   <body>
+    <div id="spinner-progress"></div>
     <div id="header">
       <div id="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container-fluid">
